--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,21 +8,56 @@ html{
   scroll-behavior: smooth;
 }
 
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
 .header {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;  
-  border: 1px black solid;
-  height: 100vh;
+  background-image: url(/assets/images/BackGroundBros.gif);
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-position: center;
+  height: 40%;
+  width: 24%;
+  border-radius: 10%;
 }
 
 .description {
   margin-bottom: 1rem;
+  font-size: 2rem;
+  color: rgba(0, 0, 255, 0.938);
 }
 
 .counter {
   display: flex;
   margin-top: 5rem;
   border: 10px black solid;
+}
+
+button{
+  font-size: 20px;
+  color: whitesmoke;
+  border-radius: 5px;
+  background-color: red;
+  border: none;
+  cursor: pointer;
+  width: 150px;
+  height: 50px;
+}
+
+button:hover{
+  background-color: white;
+  color: red;
+  transform: scale(1.1);
+}
+
+.btn-box{
+  cursor: url(/assets/images/coin.png), auto;
 }
