--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,7 @@
+*{
+  font-family: 'New Super Mario Font U', sans-serif;
+}
+
 .gameboy {
   position:relative;
   width:350px;
@@ -6,7 +10,6 @@
   padding:20px;
   background-color:#4f50db;
   box-shadow:0px -5px 0px #0d0e51, 0px 5px 0px #3d38b5;
-  font-family:sans-serif;
   cursor:default;
 
   &::after {
@@ -119,7 +122,6 @@
       }
       .subtitle {
         display:inline;
-        font-family:"Comic Sans MS";
         font-weight:bold;
         font-size:22px;
         letter-spacing:-1px;
@@ -194,7 +196,6 @@
     }
   }
 }
-
 
 * { box-sizing:border-box; }
 html, body { width:100%; height:100%; margin:0; }
