--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,15 @@
-*{
+* { 
+  box-sizing:border-box; 
   font-family: 'New Super Mario Font U', sans-serif;
+}
+
+
+html, body { 
+  width:100%; height:100%; margin:0; 
+}
+
+body { 
+  padding:30px; display:flex; justify-content:center; align-items:center; background: linear-gradient(to top, #aaa 0%, white 100%);
 }
 
 .gameboy {
@@ -11,6 +21,7 @@
   background-color:#4f50db;
   box-shadow:0px -5px 0px #0d0e51, 0px 5px 0px #3d38b5;
   cursor:default;
+  margin:0 auto;
 
   &::after {
     content:'';
@@ -165,6 +176,76 @@
     box-shadow:0px -2px 1px #6b67ed;
   }
 
+  .counter-buttons {
+    display: flex;
+    justify-content: flex-start;
+    position:relative;
+
+
+    .increment-button, .decrement-button {
+      position:absolute;
+      display:inline-block;
+      font-size:22px;
+      width:40px;
+      height:40px;
+      line-height: 40px;
+      border-radius:50%;
+      background-color:#2c313e;
+      border-bottom:2px solid #888;
+      box-shadow:-1px 1px 5px black, 0px 0px 5px black inset;
+      text-shadow:0px -1px 1px #888;
+      color:#2c313e;
+      text-align:center;
+      cursor:pointer;
+    }
+
+    .increment-button {
+      top:15px;
+      right:10px;
+    }
+
+    .decrement-button{
+      top:35px;
+      left:62%;
+    }
+  }
+
+  .start-select {
+    width:100%;
+    height:60px;
+    display:flex;
+    justify-content:center;
+    
+    .select, .start {
+      display:inline-block;
+      color:#6b67ed;
+      text-shadow:0px -1px 0px #3436bf;
+      letter-spacing:-1px;
+      width:60px;
+      font-size:16px;
+      text-align:center;
+      margin-top:120px;
+      
+      &::before {
+        content:'';
+        display:block;
+        margin:0 auto;
+        width:30px;
+        height:10px;
+        margin-bottom:5px;
+        border-radius:40%;
+        background:linear-gradient(to bottom, #0b0a1c 0%, #0b0a1c 30%, #62636c 70%, #62636c 100%);
+        background-repeat:no-repeat;
+        border:2px solid #0b0a1c;
+        box-shadow:0px -2px 1px #8482e9;
+        cursor:pointer;
+      }
+      &:active::before {
+        background:linear-gradient(to bottom, #0b0a1c 0%, #0b0a1c 50%, #62636c 100%);
+      }
+    }
+  }
+
   .speaker {
     position:absolute;
     display:flex;
@@ -195,11 +276,4 @@
       box-shadow:0px 0px 2px #7c7be0 inset;
     }
   }
-}
-
-* { box-sizing:border-box; }
-html, body { width:100%; height:100%; margin:0; }
-body { padding:30px; display:flex; justify-content:center; align-items:center; background: linear-gradient(to top, #aaa 0%, white 100%);}
-.gameboy {
-  margin:0 auto;
 }
