--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -199,6 +199,25 @@ body {
       cursor:pointer;
     }
 
+    .reset-button {
+      position:absolute;
+      display:inline-block;
+      font-size:22px;
+      border-radius: 10%;
+      width:80px;
+      height:46px;
+      line-height: 40px;
+      background-color:#2c313e;
+      border-bottom:2px solid #888;
+      box-shadow:-1px 1px 5px black, 0px 0px 5px black inset;
+      text-shadow:0px -1px 1px #888;
+      color:#2c313e;
+      text-align:center;
+      cursor:pointer;
+      top: 22px;
+      left: 12px;
+    }
+
     .increment-button {
       top:15px;
       right:10px;
