--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,6 @@
   font-family: 'New Super Mario Font U', sans-serif;
 }
 
-
 html, body { 
   width:100%; height:100%; margin:0; 
 }
@@ -119,6 +118,7 @@ body {
       border-radius:3px;
       margin-bottom:15px;
     }
+
     
     .label {
       position:relative;
@@ -129,7 +129,6 @@ body {
       .title {
         display:inline;
         font-weight:bold;
-        font-style:italic;
       }
       .subtitle {
         display:inline;
@@ -229,13 +228,13 @@ body {
     }
   }
 
-  .start-select {
+  .start-stop {
     width:100%;
     height:60px;
     display:flex;
     justify-content:center;
     
-    .select, .start {
+    .stop, .start {
       display:inline-block;
       color:#6b67ed;
       text-shadow:0px -1px 0px #3436bf;
